src/parser/grammar/RustLikeParser.ts
// Generated from grammar/RustLike.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { RustLikeListener } from "./RustLikeListener.js";
import { RustLikeVisitor } from "./RustLikeVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class RustLikeParser extends antlr.Parser {
    public static readonly T__0 = 1;
    public static readonly T__1 = 2;
    public static readonly T__2 = 3;
    public static readonly T__3 = 4;
    public static readonly T__4 = 5;
    public static readonly T__5 = 6;
    public static readonly T__6 = 7;
    public static readonly T__7 = 8;
    public static readonly T__8 = 9;
    public static readonly T__9 = 10;
    public static readonly T__10 = 11;
    public static readonly T__11 = 12;
    public static readonly T__12 = 13;
    public static readonly T__13 = 14;
    public static readonly T__14 = 15;
    public static readonly T__15 = 16;
    public static readonly T__16 = 17;
    public static readonly T__17 = 18;
    public static readonly T__18 = 19;
    public static readonly T__19 = 20;
    public static readonly T__20 = 21;
    public static readonly T__21 = 22;
    public static readonly T__22 = 23;
    public static readonly T__23 = 24;
    public static readonly T__24 = 25;
    public static readonly T__25 = 26;
    public static readonly T__26 = 27;
    public static readonly U32 = 28;
    public static readonly STRING = 29;
    public static readonly IDENTIFIER = 30;
    public static readonly BOOL = 31;
    public static readonly INT_OP = 32;
    public static readonly BOOL_BINOP = 33;
    public static readonly BOOL_OP = 34;
    public static readonly WS = 35;
    public static readonly LINE_COMMENT = 36;
    public static readonly RULE_prog = 0;
    public static readonly RULE_stmt_list = 1;
    public static readonly RULE_stmt = 2;
    public static readonly RULE_decl = 3;
    public static readonly RULE_fn_decl = 4;
    public static readonly RULE_param_list_opt = 5;
    public static readonly RULE_param_list = 6;
    public static readonly RULE_param = 7;
    public static readonly RULE_print_stmt = 8;
    public static readonly RULE_break_stmt = 9;
    public static readonly RULE_continue_stmt = 10;
    public static readonly RULE_expr_stmt = 11;
    public static readonly RULE_if_stmt = 12;
    public static readonly RULE_while_loop = 13;
    public static readonly RULE_block_stmt = 14;
    public static readonly RULE_block_expr = 15;
    public static readonly RULE_expr = 16;
    public static readonly RULE_primary = 17;
    public static readonly RULE_arg_list_opt = 18;
    public static readonly RULE_if_expr = 19;
    public static readonly RULE_array_literal = 20;
    public static readonly RULE_tuple_expr = 21;
    public static readonly RULE_range_expr = 22;
    public static readonly RULE_u32_expr = 23;
    public static readonly RULE_str_expr = 24;
    public static readonly RULE_bool_expr = 25;
    public static readonly RULE_type = 26;
    public static readonly RULE_type_list_opt = 27;

    public static readonly literalNames = [
        null, "'let'", "':'", "'='", "';'", "'fn'", "'('", "')'", "'->'", 
        "','", "'print!'", "'break'", "'continue'", "'if'", "'else'", "'while'", 
        "'{'", "'}'", "'&'", "'*'", "'['", "']'", "'..'", "'+'", "'()'", 
        "'u32'", "'bool'", "'string'", null, null, null, null, null, null, 
        "'!'"
    ];

    public static readonly symbolicNames = [
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, "U32", "STRING", "IDENTIFIER", 
        "BOOL", "INT_OP", "BOOL_BINOP", "BOOL_OP", "WS", "LINE_COMMENT"
    ];
    public static readonly ruleNames = [
        "prog", "stmt_list", "stmt", "decl", "fn_decl", "param_list_opt", 
        "param_list", "param", "print_stmt", "break_stmt", "continue_stmt", 
        "expr_stmt", "if_stmt", "while_loop", "block_stmt", "block_expr", 
        "expr", "primary", "arg_list_opt", "if_expr", "array_literal", "tuple_expr", 
        "range_expr", "u32_expr", "str_expr", "bool_expr", "type", "type_list_opt",
    ];

    public get grammarFileName(): string { return "RustLike.g4"; }
    public get literalNames(): (string | null)[] { return RustLikeParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return RustLikeParser.symbolicNames; }
    public get ruleNames(): string[] { return RustLikeParser.ruleNames; }
    public get serializedATN(): number[] { return RustLikeParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, RustLikeParser._ATN, RustLikeParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public prog(): ProgContext {
        let localContext = new ProgContext(this.context, this.state);
        this.enterRule(localContext, 0, RustLikeParser.RULE_prog);
        try {
            this.state = 62;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 0, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 56;
                this.block_expr();
                this.state = 57;
                this.match(RustLikeParser.EOF);
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 59;
                this.block_stmt();
                this.state = 60;
                this.match(RustLikeParser.EOF);
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public stmt_list(): Stmt_listContext {
        let localContext = new Stmt_listContext(this.context, this.state);
        this.enterRule(localContext, 2, RustLikeParser.RULE_stmt_list);
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 65;
            this.errorHandler.sync(this);
            alternative = 1;
            do {
                switch (alternative) {
                case 1:
                    {
                    {
                    this.state = 64;
                    this.stmt();
                    }
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                this.state = 67;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 1, this.context);
            } while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public stmt(): StmtContext {
        let localContext = new StmtContext(this.context, this.state);
        this.enterRule(localContext, 4, RustLikeParser.RULE_stmt);
        try {
            this.state = 78;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 2, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 69;
                this.decl();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 70;
                this.fn_decl();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 71;
                this.print_stmt();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 72;
                this.if_stmt();
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 73;
                this.while_loop();
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 74;
                this.break_stmt();
                }
                break;
            case 7:
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 75;
                this.continue_stmt();
                }
                break;
            case 8:
                this.enterOuterAlt(localContext, 8);
                {
                this.state = 76;
                this.expr_stmt();
                }
                break;
            case 9:
                this.enterOuterAlt(localContext, 9);
                {
                this.state = 77;
                this.block_stmt();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public decl(): DeclContext {
        let localContext = new DeclContext(this.context, this.state);
        this.enterRule(localContext, 6, RustLikeParser.RULE_decl);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 80;
            this.match(RustLikeParser.T__0);
            this.state = 81;
            this.match(RustLikeParser.IDENTIFIER);
            this.state = 82;
            this.match(RustLikeParser.T__1);
            this.state = 83;
            this.type_();
            this.state = 84;
            this.match(RustLikeParser.T__2);
            this.state = 85;
            this.expr(0);
            this.state = 86;
            this.match(RustLikeParser.T__3);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public fn_decl(): Fn_declContext {
        let localContext = new Fn_declContext(this.context, this.state);
        this.enterRule(localContext, 8, RustLikeParser.RULE_fn_decl);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 88;
            this.match(RustLikeParser.T__4);
            this.state = 89;
            this.match(RustLikeParser.IDENTIFIER);
            this.state = 90;
            this.match(RustLikeParser.T__5);
            this.state = 91;
            this.param_list_opt();
            this.state = 92;
            this.match(RustLikeParser.T__6);
            this.state = 93;
            this.match(RustLikeParser.T__7);
            this.state = 94;
            this.type_();
            this.state = 97;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 3, this.context) ) {
            case 1:
                {
                this.state = 95;
                this.block_stmt();
                }
                break;
            case 2:
                {
                this.state = 96;
                this.block_expr();
                }
                break;
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public param_list_opt(): Param_list_optContext {
        let localContext = new Param_list_optContext(this.context, this.state);
        this.enterRule(localContext, 10, RustLikeParser.RULE_param_list_opt);
        try {
            this.state = 101;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case RustLikeParser.T__6:
                this.enterOuterAlt(localContext, 1);
                // tslint:disable-next-line:no-empty
                {
                }
                break;
            case RustLikeParser.IDENTIFIER:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 100;
                this.param_list();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public param_list(): Param_listContext {
        let localContext = new Param_listContext(this.context, this.state);
        this.enterRule(localContext, 12, RustLikeParser.RULE_param_list);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 103;
            this.param();
            this.state = 108;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 9) {
                {
                {
                this.state = 104;
                this.match(RustLikeParser.T__8);
                this.state = 105;
                this.param();
                }
                }
                this.state = 110;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public param(): ParamContext {
        let localContext = new ParamContext(this.context, this.state);
        this.enterRule(localContext, 14, RustLikeParser.RULE_param);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 111;
            this.match(RustLikeParser.IDENTIFIER);
            this.state = 112;
            this.match(RustLikeParser.T__1);
            this.state = 113;
            this.type_();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public print_stmt(): Print_stmtContext {
        let localContext = new Print_stmtContext(this.context, this.state);
        this.enterRule(localContext, 16, RustLikeParser.RULE_print_stmt);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 115;
            this.match(RustLikeParser.T__9);
            this.state = 116;
            this.match(RustLikeParser.T__5);
            this.state = 117;
            this.expr(0);
            this.state = 118;
            this.match(RustLikeParser.T__6);
            this.state = 119;
            this.match(RustLikeParser.T__3);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public break_stmt(): Break_stmtContext {
        let localContext = new Break_stmtContext(this.context, this.state);
        this.enterRule(localContext, 18, RustLikeParser.RULE_break_stmt);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 121;
            this.match(RustLikeParser.T__10);
            this.state = 122;
            this.match(RustLikeParser.T__3);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public continue_stmt(): Continue_stmtContext {
        let localContext = new Continue_stmtContext(this.context, this.state);
        this.enterRule(localContext, 20, RustLikeParser.RULE_continue_stmt);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 124;
            this.match(RustLikeParser.T__11);
            this.state = 125;
            this.match(RustLikeParser.T__3);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public expr_stmt(): Expr_stmtContext {
        let localContext = new Expr_stmtContext(this.context, this.state);
        this.enterRule(localContext, 22, RustLikeParser.RULE_expr_stmt);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 127;
            this.expr(0);
            this.state = 128;
            this.match(RustLikeParser.T__3);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public if_stmt(): If_stmtContext {
        let localContext = new If_stmtContext(this.context, this.state);
        this.enterRule(localContext, 24, RustLikeParser.RULE_if_stmt);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 130;
            this.match(RustLikeParser.T__12);
            this.state = 131;
            this.expr(0);
            this.state = 132;
            this.block_stmt();
            this.state = 135;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 14) {
                {
                this.state = 133;
                this.match(RustLikeParser.T__13);
                this.state = 134;
                this.block_stmt();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public while_loop(): While_loopContext {
        let localContext = new While_loopContext(this.context, this.state);
        this.enterRule(localContext, 26, RustLikeParser.RULE_while_loop);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 137;
            this.match(RustLikeParser.T__14);
            this.state = 138;
            this.expr(0);
            this.state = 139;
            this.block_stmt();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public block_stmt(): Block_stmtContext {
        let localContext = new Block_stmtContext(this.context, this.state);
        this.enterRule(localContext, 28, RustLikeParser.RULE_block_stmt);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 141;
            this.match(RustLikeParser.T__15);
            this.state = 142;
            this.stmt_list();
            this.state = 143;
            this.match(RustLikeParser.T__16);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public block_expr(): Block_exprContext {
        let localContext = new Block_exprContext(this.context, this.state);
        this.enterRule(localContext, 30, RustLikeParser.RULE_block_expr);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 145;
            this.match(RustLikeParser.T__15);
            this.state = 146;
            this.stmt_list();
            this.state = 147;
            this.expr(0);
            this.state = 148;
            this.match(RustLikeParser.T__16);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public expr(): ExprContext;
    public expr(_p: number): ExprContext;
    public expr(_p?: number): ExprContext {
        if (_p === undefined) {
            _p = 0;
        }

        let parentContext = this.context;
        let parentState = this.state;
        let localContext = new ExprContext(this.context, parentState);
        let previousContext = localContext;
        let _startState = 32;
        this.enterRecursionRule(localContext, 32, RustLikeParser.RULE_expr, _p);
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 158;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case RustLikeParser.BOOL_OP:
                {
                localContext = new UnaryExprContext(localContext);
                this.context = localContext;
                previousContext = localContext;

                this.state = 151;
                this.match(RustLikeParser.BOOL_OP);
                this.state = 152;
                this.expr(8);
                }
                break;
            case RustLikeParser.T__17:
                {
                localContext = new RefExprContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 153;
                this.match(RustLikeParser.T__17);
                this.state = 154;
                this.expr(7);
                }
                break;
            case RustLikeParser.T__18:
                {
                localContext = new DerefExprContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 155;
                this.match(RustLikeParser.T__18);
                this.state = 156;
                this.expr(6);
                }
                break;
            case RustLikeParser.T__5:
            case RustLikeParser.T__12:
            case RustLikeParser.T__15:
            case RustLikeParser.T__19:
            case RustLikeParser.U32:
            case RustLikeParser.STRING:
            case RustLikeParser.IDENTIFIER:
            case RustLikeParser.BOOL:
                {
                localContext = new PrimaryExprContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 157;
                this.primary();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
            this.context!.stop = this.tokenStream.LT(-1);
            this.state = 178;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 9, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    if (this.parseListeners != null) {
                        this.triggerExitRuleEvent();
                    }
                    previousContext = localContext;
                    {
                    this.state = 176;
                    this.errorHandler.sync(this);
                    switch (this.interpreter.adaptivePredict(this.tokenStream, 8, this.context) ) {
                    case 1:
                        {
                        localContext = new BinaryOpExprContext(new ExprContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, RustLikeParser.RULE_expr);
                        this.state = 160;
                        if (!(this.precpred(this.context, 3))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 3)");
                        }
                        this.state = 161;
                        this.match(RustLikeParser.INT_OP);
                        this.state = 162;
                        this.expr(4);
                        }
                        break;
                    case 2:
                        {
                        localContext = new LogicalExprContext(new ExprContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, RustLikeParser.RULE_expr);
                        this.state = 163;
                        if (!(this.precpred(this.context, 2))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 2)");
                        }
                        this.state = 164;
                        this.match(RustLikeParser.BOOL_BINOP);
                        this.state = 165;
                        this.expr(3);
                        }
                        break;
                    case 3:
                        {
                        localContext = new IndexExprContext(new ExprContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, RustLikeParser.RULE_expr);
                        this.state = 166;
                        if (!(this.precpred(this.context, 5))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 5)");
                        }
                        this.state = 167;
                        this.match(RustLikeParser.T__19);
                        this.state = 168;
                        this.expr(0);
                        this.state = 169;
                        this.match(RustLikeParser.T__20);
                        }
                        break;
                    case 4:
                        {
                        localContext = new CallExprContext(new ExprContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, RustLikeParser.RULE_expr);
                        this.state = 171;
                        if (!(this.precpred(this.context, 4))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 4)");
                        }
                        this.state = 172;
                        this.match(RustLikeParser.T__5);
                        this.state = 173;
                        this.arg_list_opt();
                        this.state = 174;
                        this.match(RustLikeParser.T__6);
                        }
                        break;
                    }
                    }
                }
                this.state = 180;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 9, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(parentContext);
        }
        return localContext;
    }
    public primary(): PrimaryContext {
        let localContext = new PrimaryContext(this.context, this.state);
        this.enterRule(localContext, 34, RustLikeParser.RULE_primary);
        try {
            this.state = 194;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 10, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 181;
                this.u32_expr();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 182;
                this.str_expr();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 183;
                this.bool_expr();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 184;
                this.match(RustLikeParser.IDENTIFIER);
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 185;
                this.match(RustLikeParser.T__5);
                this.state = 186;
                this.expr(0);
                this.state = 187;
                this.match(RustLikeParser.T__6);
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 189;
                this.if_expr();
                }
                break;
            case 7:
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 190;
                this.array_literal();
                }
                break;
            case 8:
                this.enterOuterAlt(localContext, 8);
                {
                this.state = 191;
                this.tuple_expr();
                }
                break;
            case 9:
                this.enterOuterAlt(localContext, 9);
                {
                this.state = 192;
                this.range_expr();
                }
                break;
            case 10:
                this.enterOuterAlt(localContext, 10);
                {
                this.state = 193;
                this.block_expr();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public arg_list_opt(): Arg_list_optContext {
        let localContext = new Arg_list_optContext(this.context, this.state);
        this.enterRule(localContext, 36, RustLikeParser.RULE_arg_list_opt);
        let _la: number;
        try {
            this.state = 205;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case RustLikeParser.T__6:
                this.enterOuterAlt(localContext, 1);
                // tslint:disable-next-line:no-empty
                {
                }
                break;
            case RustLikeParser.T__5:
            case RustLikeParser.T__12:
            case RustLikeParser.T__15:
            case RustLikeParser.T__17:
            case RustLikeParser.T__18:
            case RustLikeParser.T__19:
            case RustLikeParser.U32:
            case RustLikeParser.STRING:
            case RustLikeParser.IDENTIFIER:
            case RustLikeParser.BOOL:
            case RustLikeParser.BOOL_OP:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 197;
                this.expr(0);
                this.state = 202;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (_la === 9) {
                    {
                    {
                    this.state = 198;
                    this.match(RustLikeParser.T__8);
                    this.state = 199;
                    this.expr(0);
                    }
                    }
                    this.state = 204;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public if_expr(): If_exprContext {
        let localContext = new If_exprContext(this.context, this.state);
        this.enterRule(localContext, 38, RustLikeParser.RULE_if_expr);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 207;
            this.match(RustLikeParser.T__12);
            this.state = 208;
            this.expr(0);
            this.state = 209;
            this.block_expr();
            this.state = 212;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 13, this.context) ) {
            case 1:
                {
                this.state = 210;
                this.match(RustLikeParser.T__13);
                this.state = 211;
                this.block_expr();
                }
                break;
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public array_literal(): Array_literalContext {
        let localContext = new Array_literalContext(this.context, this.state);
        this.enterRule(localContext, 40, RustLikeParser.RULE_array_literal);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 214;
            this.match(RustLikeParser.T__19);
            this.state = 223;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (((((_la - 6)) & ~0x1F) === 0 && ((1 << (_la - 6)) & 331379841) !== 0)) {
                {
                this.state = 215;
                this.expr(0);
                this.state = 220;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (_la === 9) {
                    {
                    {
                    this.state = 216;
                    this.match(RustLikeParser.T__8);
                    this.state = 217;
                    this.expr(0);
                    }
                    }
                    this.state = 222;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                }
            }
